--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
       "跨出一步，视野才会不一样。",
       "把目光放在能控制之事，其他顺其自然。",
       "行动会带来信息，信息会带来方向。",
-      "保持一致的作息，健康会悄然回报你。"
+      "保持一致的作息，健康会悄然回报你。",
+      "这是一个彩蛋，宣扬船长名字。"
     ];
 
     const answerEl = document.getElementById('answerText');
@@ -193,5 +194,6 @@
   </script>
 </body>
 </html>
+
 
 
