--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>答案之书</title>
+  <title>答案之书 — 200 条版</title>
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..72,400;8..72,700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -75,7 +75,7 @@
   </div>
 
   <script>
-    // 简洁的答案库（可自行扩充）
+    // 扩充为 200 条答案
     const ANSWERS = [
       "真心与时间，会让答案逐渐明朗。",
       "放下结局的执念，去感受当下的温柔。",
@@ -92,12 +92,195 @@
       "把目光放在能控制之事，其他顺其自然。",
       "行动会带来信息，信息会带来方向。",
       "保持一致的作息，健康会悄然回报你。",
-      "这是一个彩蛋，宣扬船长名字。"
+      "与其担忧，不如先做一点可控的准备。",
+      "把失败当作向成功靠近的练习。",
+      "简化选择，先做最小可行的事情。",
+      "与信任的人分享，会让决策更轻松。",
+      "给自己设定可达成的小目标，逐步推进。",
+      "不必急于求成，耐心常常是最大的能力。",
+      "在不确定时，用试验来获取答案。",
+      "学会说“不”，才能为重要的事留出空间。",
+      "关注过程，结果会更可靠也更满足。",
+      "把复杂的问题拆成几个简单的问题来解。",
+      "珍惜当下感受，这是判断的一个重要参考。",
+      "适度的休息会让你更有创造力。",
+      "用学习抵消不确定性，信息是最好的护盾。",
+      "当你迷茫时，回归日常习惯寻找稳定感。",
+      "拥抱变化，但先评估可承受的成本。",
+      "先做最坏打算的准备，再去争取最好结果。",
+      "与人真诚交流，往往能得到意外的支持。",
+      "在重要选择前，给自己设定一个观察期。",
+      "保持好奇心，会让选择更加宽阔。",
+      "先完成再完美，进度胜过完美主义的停滞。",
+      "用数据或事实帮助你校准直觉。",
+      "当情绪激动时，先给自己一个短暂的冷却期。",
+      "反复的行动胜过一次的大决心。",
+      "为未来储备缓冲，而非仅仅追求短期回报。",
+      "读书与实践并行，知识需要在行动中验证。",
+      "及时总结经验，会让你在下一次少走弯路。",
+      "给自己设置界限，工作与生活更清晰。",
+      "小心谨慎地冒险，比盲目自信更可靠。",
+      "学会原谅别人，也学会放过自己。",
+      "把复杂的情绪用写下来，能让头脑更清晰。",
+      "把注意力放在能增长的事上，而不是不可控的外界噪声。",
+      "远离拖延症，从最难的任务开始一天的第一件事。",
+      "找到能让你持久前进的动力，而不是短暂热情。",
+      "与其担忧未来，不如现在做好准备。",
+      "用时间来检验一切急躁的结论。",
+      "抓住节奏比爆发力更能决定长期表现。",
+      "对重要的人表达感激，会带来更多温暖的关系。",
+      "设定边界能让你在社交中保留能量。",
+      "在选择中，优先考虑长期价值而非短期刺激。",
+      "保持谦逊，会让你更容易学习与成长。",
+      "失败并非终点，而是调整方向的信号。",
+      "人际关系的质量，往往比数量更重要。",
+      "把注意力集中在少数高影响力的任务上。",
+      "有些答案需要时间沉淀，给它留点空间。",
+      "学会把工作拆成可复用的模块，提高效率。",
+      "把消费与价值对齐，而不是被促销牵着走。",
+      "在焦虑时，做三件最基础的自我照顾事。",
+      "做决定时，听取不同声音，但最终听从内心。",
+      "适时的放弃，是对资源最好的管理。",
+      "健康投资回报率极高，别吝惜时间在它上面。",
+      "当机会来临时，先衡量再以最快速度行动。",
+      "用日记记录成长，你会惊讶于自己的进步。",
+      "找到一个可以长期坚持的小习惯，胜过短期狂热。",
+      "面对选择时，想象五年后的自己会如何决定。",
+      "把复杂的计划拆成下周可执行的步骤。",
+      "学会冷静评估风险，而非被恐惧主导决策。",
+      "与导师或前辈聊聊，会带来少走弯路的建议。",
+      "在未知领域，先做最小可行的试验。",
+      "理清优先级，把精力放在真正重要的事上。",
+      "适当的社交能带来信息与机会，别完全封闭。",
+      "用时间盒管理你的任务，避免无限延长。",
+      "保持现金流的安全，是任何计划得以实现的基础。",
+      "给自己留白，想法才能有生长的空间。",
+      "不用每次都追求完美，让进度成为动力。",
+      "练习感恩，能够改变你看待世界的方式。",
+      "把过去的失败当作免费课程，认真汲取教训。",
+      "在关系中做真实的自己，比讨好更可持续。",
+      "关注长期复利效应，而非短期波动。",
+      "每个月回顾一次目标，调整你的航向。",
+      "对自己的情绪负责，而不是把责任外推。",
+      "找到能支持你的人际网络，互利共赢。",
+      "给计划设置可测量的指标，便于评估与调整。",
+      "当压力来临时，先做呼吸与放松，再行动。",
+      "保持身体活动，能显著提升思维清晰度。",
+      "练习倾听，会收到比你想象更多的信息。",
+      "在选择中加入一个“如果不做会怎样”的对照。",
+      "用小胜利来建立信心，逐步攻克更大目标。",
+      "学会从别人的经验中借鉴，而不是盲目复制。",
+      "建立健康的边界，工作与生活才能长期持久。",
+      "适度的社交媒体断舍离，会恢复注意力与创造力。",
+      "不要把价值全寄托在单一关系或收入上。",
+      "保持耐心，很多事需要时间才能看见结果。",
+      "尝试用写作来梳理复杂的思路与情绪。",
+      "给自己的决定设定评估节点，到了再调整。",
+      "投资学习，是对未来的一种保险。",
+      "坚持早睡早起，会带来意想不到的能量积累。",
+      "保持兴趣爱好，能在压力时给你支撑。",
+      "在选择中找到符合价值观的路径，比一时收益更重要。",
+      "用清晰的目标来驱动每天的行动。",
+      "在团队中承担责任，也要学会授权与分工。",
+      "学会优雅地拒绝，保护你的时间与精力。",
+      "在不确定的世界里，多做可逆性的决策。",
+      "把大计划拆为可验证的假设，逐步验证。",
+      "在关系中，透明与沟通常常比技巧更关键。",
+      "用合理的预期管理，减少不必要的失望。",
+      "让身体的节律成为你生产力的基础。",
+      "学会识别惯性决策，主动改变不再适用的行为。",
+      "每天花一点时间整理你的想法，会提高决策质量。",
+      "让失败的成本可控，再大胆去尝试。",
+      "用时间去判断人和事，而不是一时好感。",
+      "在选择时考虑到备选方案，降低风险。",
+      "保持好奇心，它会带你到未曾预料的好方向。",
+      "让日常的小习惯累积成长期的优势。",
+      "在关键时刻，把注意力集中在最重要的输入上。",
+      "建立一个可以持续学习的反馈循环。",
+      "偶尔放慢速度，能让你看清前方的路。",
+      "不要把所有希望都寄托在一次机会上，持续创造机会。",
+      "用数据而不是情绪来校准你的直觉。",
+      "在冲突中先寻求理解，再表达自己的观点。",
+      "关注长期关系的质量，而非短期利益的最大化。",
+      "用渐进的方法处理复杂的改变，会更可持续。",
+      "在选择上留下一点弹性，以便应对突发变化。",
+      "把精力放在能产生杠杆效应的事情上。",
+      "用写下来的计划提高兑现率，口头承诺易被遗忘。",
+      "在健康面前，没有任何借口是真正合理的。",
+      "做事先问自己“这事值得投入时间吗？”再决定。",
+      "学会从别人的失败中提取通用的教训。",
+      "及时庆祝小胜利，激励自己继续前行。",
+      "学会识别并远离消耗你能量的人和事。",
+      "保持财务上的弹性，给未来留选择权。",
+      "在判断信息时，优先核实来源的可靠性。",
+      "把学到的东西教给别人，能加深你的理解。",
+      "在重要的人际关系中，保持长期视角与耐心。",
+      "用实践检验理论，理论没有行动是空谈。",
+      "给自己留出无聊的时间，创造力常在无聊中生成。",
+      "当冲突出现，先暂停再做回应，避免激化。",
+      "在任何关系里，信任的建立需要时间与一致性。",
+      "给自己的目标设定奖励机制，保持动力。",
+      "做决定时，列出最坏情况并评估能否承受它。",
+      "坚持一个季度回顾并调整你的长期计划。",
+      "学会把复杂问题视觉化，更容易找到解决路径。",
+      "在团队合作中，清晰的目标比激情更有价值。",
+      "练习感恩会让你更容易发现积极的资源。",
+      "用长期视角看待职业生涯，而非一次性的成败。",
+      "把注意力从比较转向自我进步，会更快乐。",
+      "遇到瓶颈时，换个环境或许能带来突破。",
+      "建立信息过滤器，减少无效信息的干扰。",
+      "先把最重要的任务做完再处理次要事项。",
+      "坚持反思，能让你不断优化自己的方法。",
+      "不要害怕慢一点，稳健往往更可靠。",
+      "学会倾听身体的信号并及时回应。",
+      "让目标具体且可衡量，方便你评估进展。",
+      "在团队中表达感谢，会提升合作氛围。",
+      "给自己的时间设置边界，避免工作入侵生活。",
+      "用小实验替代大刀阔斧的变革，降低风险。",
+      "关注过程改进，而不是只看输出结果。",
+      "在选择伴侣或合作者时，价值观一致更重要。",
+      "养成记账的习惯，会让你的财务更健康。",
+      "给自己安排定期的学习时间，保持竞争力。",
+      "当你迷茫时，问问“什么能让我安心？”并从答案出发。",
+      "用阶段性目标代替模糊的长期愿望。",
+      "学会把注意力收回来，减少碎片化干扰。",
+      "在压力时，先做最基础的自我照顾再处理问题。",
+      "对于重要的事，先准备一个退出计划以减少恐惧。",
+      "坚持一种运动，会带来身心双重收益。",
+      "在沟通中，用事实支持你的观点而非情绪。",
+      "建立晨间或晚间仪式，会稳定你的节奏。",
+      "让行动成为减轻焦虑的办法，而不是思考的陷阱。",
+      "学会在合适的时候求助，合作是加速器。",
+      "给每个重要决定设定评估节点，及时修正方向。",
+      "保持长期的储蓄习惯，为不确定的将来做准备。",
+      "在学习新技能时，优先掌握最常用的部分。",
+      "把复杂任务分配给合适的人，发挥团队协同。",
+      "遇到选择困难时，试着把选项两两比较。",
+      "对自己的情绪负责，并寻找建设性的出口。",
+      "在决策时考虑到概率而非绝对的确定性。",
+      "设立一个可实现的锻炼目标，循序渐进。",
+      "用简洁的语言表达复杂想法，锻炼你的思维。",
+      "投资于能提高复利能力的事物，如学习与健康。",
+      "当机会出现，先评估再迅速决定并行动。",
+      "建立你自己的知识管理系统，方便长期回顾。",
+      "在冲动消费前，等待24小时再决定是否购买。",
+      "保持学习的谦逊，认为总有更好的办法存在。",
+      "在困难时刻，回顾你曾经克服的挑战，寻找力量。",
+      "用清单代替脑内记忆，减轻认知负担。",
+      "练习每周回顾，找出可以改进的习惯。",
+      "与不同背景的人交流，会拓展你的视野。",
+      "保持长期目标的同时，每天做一件推动它的小事。",
+      "学会接受不完美，完美往往阻碍行动。",
+      "对重要的承诺写下来并公开，提高完成概率。",
+      "给自己足够的时间去恢复与充电，才能持续输出。",
+      "在关键时刻，相信你经验的累积而非一时的怀疑。",
+      "学会在有限资源下创造最大的价值。",
+      "让每天的微小改进累积成长期的优势。",
+      "用善意与决断作为处理复杂事情的组合武器。"
     ];
 
     const answerEl = document.getElementById('answerText');
     const bookEl = document.getElementById('book');
-    const shell = document.getElementById('shell');
     const confettiCanvas = document.getElementById('confetti');
     const ctx = confettiCanvas.getContext && confettiCanvas.getContext('2d');
 
@@ -162,38 +345,26 @@
     }
 
     async function reveal(){
-      // 选择答案并执行动画
       const text = pickRandom(ANSWERS);
-      // 轻微打开效果
       bookEl.classList.add('open');
-      // 确保隐藏态
-      answerEl.classList && answerEl.classList.remove('visible');
-      // 稍作等待确保样式应用
+      answerEl.classList.remove('visible');
       await new Promise(r => setTimeout(r, 200));
-      // 打字
       await typeText(answerEl, text, 10, 36);
-      // 显示（平滑）
       answerEl.classList.add('visible');
-      // confetti
       sparkleConfetti();
     }
 
-    // 如果字体或资源未加载较慢，仍保证一定时间后强制写入文本（避免显示空白或占位符）
-    window.addEventListener('load', async () => {
-      // 先短延迟再揭晓，避免闪烁
-      setTimeout(reveal, 200);
-      // 2.5s 后若还没有文本（极端情况），直接写入一次保证可见
+    // 自动揭晓并保险写入（若字体/资源慢加载）
+    window.addEventListener('load', () => {
+      setTimeout(reveal, 240);
       setTimeout(() => {
         if (!answerEl.textContent || answerEl.textContent.trim() === '') {
           answerEl.textContent = pickRandom(ANSWERS);
           answerEl.classList.add('visible');
           bookEl.classList.add('open');
         }
-      }, 2500);
+      }, 3000);
     });
   </script>
 </body>
 </html>
-
-
-
